--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,4 @@
+<h1>time slot sign up <button onclick="window.location.href='/admin/login'">admin login</button></h1>
 <table>
     <tr>
         <th>Time</th>
