--- a/views/success.hbs
+++ b/views/success.hbs
@@ -1,4 +1,4 @@
-<p>submitted successfully - redirecting...</p>
+<p>{{text}}</p>
 <script>
-    setTimeout(() => {window.location.href = "/"}, 1000);
+    setTimeout(() => {window.location.href = "{{redirect}}"}, 1000);
 </script>
