--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,81 +8,6 @@ textarea {
     resize: none;
 }
 
-.modalBox {
-    display: block;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border: 1px solid black;
-    padding: 10px;
-    line-height: 20pt;
-    background-color: white;
-    user-select: none;
-}
-
-.modalBox input {
-    width: 100%;
-    user-select: normal;
-}
-
-.modalBoxTitle {
-    background-color: white;
-    display: inline-block;
-    top: 0;
-    width: 100%;
-    font-size: 16pt;
-    text-align: center;
-    padding: 10px;
-    filter: invert();
-    margin-bottom: 10px;
-    margin-left: -10px;
-    margin-right: -10px;
-    margin-top: -10px;
-}
-
-.numberInput {
-    display: inline-block; 
-    height: 16pt; 
-    vertical-align: middle; 
-    text-align: center;
-    border: 1px solid gray;
-}
-
-.numberInput_text {
-    display: inline-block;
-    height: 16pt;
-    width: 80px;
-    line-height: 16pt;
-    vertical-align: top;
-}
-
-.numberInput_buttonContainer {
-    display: inline-block;
-    height: 100%;
-    line-height: 100%;
-    vertical-align: top;
-    margin: 0;
-}
-
-.numberInput_button {
-    display: block; 
-    width: 20pt; 
-    height: 50%; 
-    font-size: 6pt;
-    cursor: pointer;
-    padding: 0;
-    line-height: 50%;
-    text-align: center;
-}
-
-.numberInput_button:hover {
-    background-color: black;
-    color: white;
-}
-
-.numberInput_button_text {
-    display: inline-block;
-    vertical-align: middle;
-    line-height: normal;
+.bold {
+    font-weight: 900;
 }
