--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
 		<link rel="stylesheet" href="/css/style.css" type="text/css" />
 		<title>Scheduling App</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
